# 033020SDLandSkia

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/assets/: demo.txt  fs.glsl  vs.glsl
app/src/androidTest/java/ztn/edu/a020520sdltutorial00/: ExampleInstrumentedTest.java
app/src/androidTest/java/ztn/edu/a020620sdltest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AssetsHelper.cpp  AssetsHelper.h  FileHelper.cpp  FileHelper.h  GUI.cpp  GUI.h  MusicHelper.cpp  MusicHelper.h  head.h  main.cpp  model.cpp  model.h
app/src/main/java/org/libsdl/app/: SDLActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/ztn/edu/a020520sdltutorial00/: ExampleUnitTest.java
app/src/test/java/ztn/edu/a020620sdltest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
